2006-05-26 23:53  pbrook

	* vl.h, hw/esp.c, hw/scsi-disk.c, hw/usb-msd.c: SCSI lun probing
	  fix.

2006-05-26 20:08  pbrook

	* hw/scsi-disk.c: Small read fix.

2006-05-26 19:15  pbrook

	* hw/esp.c: Fix partial transfer bug.

2006-05-26 18:46  pbrook

	* hw/scsi-disk.c: Fix scsi sector size confusion (Blue Swirl).	Fix
	  short TOC read.

2006-05-26 02:49  pbrook

	* qemu-doc.texi: Update USB documentation.

2006-05-26 01:58  pbrook

	* Makefile.target, usb-linux.c, vl.c, vl.h, hw/cdrom.c, hw/esp.c,
	  hw/ide.c, hw/scsi-disk.c, hw/usb-hid.c, hw/usb-hub.c,
	  hw/usb-msd.c, hw/usb.c, hw/usb.h: Rearrange SCSI disk emulation
	  code.  Add USB mass storage device emulation.

2006-05-26 01:37  pbrook

	* hw/usb-ohci.c: OHCI large packet fix.

2006-05-23 01:06  bellard

	* target-arm/translate.c: ARM undefined instruction execution
	  (Jason Wessel)

2006-05-23 00:14  bellard

	* target-mips/: helper.c, op_helper.c: fix wrong bitmasks for
	  CP0_Context and CP0_EntryHi (Thiemo Seufer)

2006-05-23 00:13  bellard

	* target-mips/: helper.c, op_helper.c, translate.c: cosmetics
	  (Thiemo Seufer)

2006-05-23 00:05  bellard

	* mips-dis.c: dump all mips insn (Thiemo Seufer)

2006-05-23 00:03  bellard

	* cpu-exec.c, target-mips/helper.c: mips cleanup (Thiemo Seufer)

2006-05-22 23:50  bellard

	* target-ppc/: op.c, translate.c: PPC Breakpoints for gdb-stub
	  (Jason Wessel)

2006-05-22 23:25  bellard

	* cocoa.m: fix missing type declarations (Joachim Henke)

2006-05-22 19:17  pbrook

	* hw/: usb-ohci.c, usb-uhci.c: Fix USB root hub hotplugging.

2006-05-22 16:10  pbrook

	* osdep.c: Only use /dev/shm hack when kqemu is enabled.

2006-05-22 00:20  pbrook

	* hw/esp.c: Don't clear DMA status register when loading address.

2006-05-21 18:30  pbrook

	* Makefile.target, vl.c, vl.h, hw/pc.c, hw/ppc_chrp.c,
	  hw/ppc_prep.c, hw/usb-hub.c, hw/usb-ohci.c, hw/usb-uhci.c,
	  hw/usb.h, hw/versatilepb.c: OHCI USB host emulation.

2006-05-21 15:45  pbrook
